intento de arreglo test e2e